feat: add years and stats endpoints to the API, and cache this data
